# Watabautet

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  docker-compose-dev.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  alembic.ini  docker-compose.test.yml  pyproject.toml
backend/app/: crud.py  main.py  models.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2283c4287d7d_.py  5eb8a38a6d93_.py  b505969ebe30.py  c758b95b8856_.py  ff4be524b221_.py
backend/app/api/: deps.py  main.py  utils.py
backend/app/api/routes/: login.py  summaries.py  users.py  videos.py
backend/app/core/: celery_client.py  config.py  db.py
backend/app/tests/: conftest.py  utils.py
backend/app/tests/api/routes/: test_login.py  test_summaries.py  test_users.py  test_videos.py
backend/scripts/: migration.sh  run-dev.sh  run-tests.sh  run.sh  test.sh
frontend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  metadata.json  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.html  types.ts
frontend/src/components/: ActionBurst.tsx  AmpSlider.tsx  AuthModal.tsx  Library.tsx  Mascot.tsx  ResultPanel.tsx
frontend/src/components/forms/: LanguageToggle.tsx  UrlInput.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: BrutalistButton.tsx  ErrorDisplay.tsx  LoadingSpinner.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: usePolling.ts
frontend/src/services/: api.ts  client.ts  mockBackend.ts
frontend/src/services/auth/: login.ts  logout.ts  register.ts  utils.ts
frontend/src/services/summary/: summary.ts
frontend/src/services/utils/: polling.ts
frontend/src/services/video/: video.ts
monitoring/: alloy-config.alloy  loki-config.yaml  prometheus.yml
workers/: .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  pyproject.toml
workers/app/: celery.py  exceptions.py  subtitle.py  tasks.py  utils.py
workers/scripts/: format.sh  lint.sh  run-dev.sh  run.sh
