[project]
name = "watabautet"
authors = [{ name = "Mas5ive", email = "empty@empty" }]
version = "0.1.0"
description = """The application provides users with the ability to extract summarised content from YouTube videos.
 The summarisation uses an ML model based on NLP (Natural Language Processing) from the open source Huggingface
 platform. The main use of the app is to speed up information retrieval from long videos, with the ability
 to save and organise the extracted summaries for future use."""
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = ["backend", "workers"]

[tool.uv.sources]
backend = { workspace = true }
workers = { workspace = true }


[tool.uv.workspace]
members = ["backend", "workers"]
