[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "Mas5ive", email = "empty@empty" }]
requires-python = ">=3.13, <4.0"
dependencies = [
    "alembic<2.0.0,>=1.14.0",
    "fastapi<1.0.0,>=0.115.6",
    "httpx<1.0.0,>=0.28.1",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "psycopg[binary]<4.0.0,>=3.2.4",
    "pydantic-settings>=2.7.1,<3.0.0",
    "pyjwt<3.0.0,>=2.10.1",
    "python-multipart<1.0.0,>=0.0.20",
    "redis<6.0.0,>=5.2.1",
    "sqlmodel<1.0.0,>=0.0.22",
    "uvicorn[standard]<1.0.0,>=0.34.0",
]

[dependency-groups]
dev = ["debugpy<2.0.0,>=1.8.12", "pytest<9.0.0,>=8.3.4"]
