[project]
name = "backend"
version = "0.1.0"
description = """An application based on FastAPI that provides an API for creating tasks to generate
 YouTube video summaries and for managing user data."""
authors = [{ name = "Mas5ive", email = "empty@empty" }]
requires-python = ">=3.13, <4.0"
dependencies = [
    "celery>=5.4.0,<6.0.0",
    "redis>=5.2.1,<6.0.0",
    "alembic>=1.14.0,<2.0.0",
    "fastapi>=0.115.6,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "bcrypt==4.2.1",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "psycopg[binary]>=3.2.4,<4.0.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "sqlmodel>=0.0.22,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2,<3.0.0",
    "debugpy>=1.8.12,<2.0.0",
    "pytest>=8.3.4,<9.0.0",
]


[tool.autopep8]
max_line_length = 120


