[project]
name = "workers"
version = "0.1.0"
description = """Celery workers performing tasks to obtain subtitles from YouTube and generate
 summaries using an external LLM."""
authors = [{ name = "Mas5ive", email = "empty@empty" }]
requires-python = ">=3.13, <4.0"
dependencies = [
    "celery>=5.4.0,<6.0.0",
    "google-genai>=1.56.0,<2.0.0",
    "redis>=5.2.1,<6.0.0",
    "structlog>=25.5.0,<26.0.0",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2,<3.0.0",
    "debugpy<2.0.0,>=1.8.12",
    "pre-commit>=4.6.0,<5.0.0",
    "pyright>=1.1.408,<2.0.0",
    "ruff>=0.15.10,<1.0.0",
    "watchdog<7.0.0,>=6.0.0",
]
test = ["pytest<9.0.0,>=8.3.4"]


[tool.autopep8]
max_line_length = 120


[tool.ruff.lint]
select = ["F", "I", "W", "E"]

[tool.ruff]
line-length = 120


[tool.pyright]
include = ["app"]
typeCheckingMode = "basic"
pythonVersion = "3.13"
